--- a/LatexTFG/Capitulos/02Capitulo2.tex
+++ b/LatexTFG/Capitulos/02Capitulo2.tex
@@ -86,7 +86,7 @@ Para que este ciclo periódico funcione de manera correcta, síncrona y con total 
 %-------------------------------------------------------------------
 \label{cap2:subsec:obtención}
 
-\figura{Vectorial/electrodos}{width=0.6\textwidth}{fig:corazon}%
+\figura{Vectorial/electrodos}{width=0.6\textwidth}{fig:electrodos}%
 {Puntos clave en el registro de un ECG}
 
 El proceso físico a traves del cual se realiza el procedimiento de registro y se obtiene el ECG consiste en la medición de la actividad eléctrica del corazón entre distintos puntos corporales, ya que, mientras que el corazón pasa por los estados de polarización y despolarización, el cuerpo en su conjunto se comporta como un volumen conductor, propagando la corriente eléctrica.
